# chip8

./: .clang-format  CMakeLists.txt  README.md
include/: chip8.h  chip8_display.h
src/: CMakeLists.txt  chip8.cc  chip8_display.cpp  display.cc  file_reader.cc  instruction.cc  key_input.cc  key_input.cpp  main.cpp  utils.cc
src/include/: chip8.h  display.h  file_reader.h  instruction.h  key_input.h  timer.h  utils.h
test/: CMakeLists.txt  test.cpp
